# chip8emuRS

./: Cargo.toml  README.md
.github/workflows/: rust.yml
roms/: hex_output.txt  memdump.txt
src/: emustatus.rs  main.rs  opcodeparse.rs
