[package]
name = "chip8emuRS"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", features = [
    "default",
    "__screenshot", 
] }
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
tinyfiledialogs = "3.9.1"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rand = "0.9.1"
